# 2plantORNOT2plant

./: .gitignore  readme.md  systemSequenceDiegram.md
.devcontainer/: devcontainer.json
.github/workflows/: destroy-env.yml  promote-reuse.yml  promote.yml  pull_request.yml  release.yml
.run/: AnalyticsApplication.run.xml  Flask (nave_analytics_app.py).run.xml  Flask.run.xml  Run All Tests.run.xml  Start DB.run.xml  build.run.xml  install.run.xml  start.run.xml
api/: build.gradle  docker-compose-full.yml  docker-compose.yml
data/2023-12-14/02805360-cef8-4a98-8f87-ee8085963fe1/: FBTM_8383bc67-8a59-11ee-bfb0-000000000001_2023-12-24_10934.537704.nc  FTOP_8383bc67-8a59-11ee-bfb0-000000000001_2023-12-24_6762.020091_WRes.nc  FTOP_8383bc67-8a59-11ee-bfb0-000000000001_2023-12-24_6762.069064_HRes.nc  FW1D_8383bc67-8a59-11ee-bfb0-000000000001_2023-12-24_6762.194122.nc  SGR250_13ec331c-8a5a-11ee-b79d-000000000001_2023-11-30_68014.956919.nc
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/spec/: apiCalls.ts  config.ts
e2e/spec/e2e/: admin-flows.spec.ts  (+2 more)
infrastructure/: cdk.context.json  package-lock.json
infrastructure/test/: infrastructure.test.ts
nave_analytics/: .gitignore  Dockerfile  app.py  openapi.yaml  requirements.txt  setup.cfg
nave_analytics/src/: __init__.py  api.py  auth.py  exceptions.py  field_level.py  planting_conditions.py  soil_moisture_content.py  utils.py
web/: .eslintrc.cjs  .gitignore  index.html  jest.config.js  jest.config.ts  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  AppTest.spec.ts  main.tsx
(+313 files in other folders)
