[metadata]
name = nave-analytics
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
packages = src
install_requires =
    boto3
    flask
    flask-cors
    flask-swagger-ui
    geopandas
    gunicorn
    netcdf4
    numpy
    pandas
    python-jose
    requests
    scipy
    shapely
    xarray

[options.extras_require]
dev =
    jupyter
    matplotlib
    pytest
    pytest-cov

[pylint.FORMAT]
disable = all
enable = unused-import